--- a/src/_includes/components/header2.html
+++ b/src/_includes/components/header2.html
@@ -62,7 +62,7 @@
                         </span>
                         <ul class="cs-drop-ul">
                             <li class="cs-drop-li">
-                                <a href="/wedding" class="cs-li-link cs-drop-link">Weddings</a>
+                                <a href="/weddings" class="cs-li-link cs-drop-link">Weddings</a>
                             </li>
                             <li class="cs-drop-li">
                                 <a href="/corporate" class="cs-li-link cs-drop-link">Corporate Events</a>
@@ -83,7 +83,7 @@
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="/contact_us" class="cs-li-link">
+                        <a href="/contact" class="cs-li-link">
                             Contact Us
                         </a>
                     </li>
