--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -1,23 +1,22 @@
 <!-- ============================================ -->
-<!--             Final Call to Action             -->
+<!--                     CTA                      -->
 <!-- ============================================ -->
 
-<section id="cta">
-    <div class="container">
-        <h2 class="title">
-            Get It Done
-            <br />
-            With Us Today
-        </h2>
-        <p>
-            Say something catchy, informative, and encouraging to click the button to go to the contact page. I like to add these to the bottom of all pages.
-        </p>
-        <a href="/contact" class="cs-button-solid">Get an Estimate Now</a>
+<section id="cta-51">
+    <div class="cs-container">
+        <div class="cs-content">
+            <span class="cs-topper">Contact Us</span>
+            <h2 class="cs-title">Get It Done With Us Today</h2>
+            <p class="cs-text">
+                Let's make your wedding day even more special with the enchanting touch of our 360 photobooth
+            </p>
+            <a href="/booking" class="cs-button-solid">Book Your Photobooth</a>
+        </div>
     </div>
-    <picture>
-        <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-        <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-        <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" loading="lazy" width="2500" height="1667">
+    <!-- Background Image-->
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/Services/Hero_s.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/Services/Hero_s.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/Services/Hero.jpeg" alt="Photobooth Hero" width="1920" height="1280" aria-hidden="true">
     </picture>
-
 </section>
