--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -20,9 +20,9 @@
     <meta property="og:image:secure_url" content="/assets/images/logo-small.png" />
 
     <!--Favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png?v1">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/Favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/Favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/Favicon.png">
     <link rel="manifest" href="/assets/favicons/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
@@ -40,6 +40,7 @@
     <!-- Sitewide Stylesheets and Scripts -->
     <link rel="stylesheet" href="/css/root.css">
     <link rel="stylesheet" href="/css/dark.css">
+    <link rel="stylesheet" href="/css/cta.css">
     <script defer src="/assets/js/nav.js"></script>
     <script defer src="/assets/js/dark.js"></script>
 
@@ -75,6 +76,7 @@
     <main id="main">
       {% block body %}{% endblock %}
     </main>
+    {% include "components/cta.html" %}
     {% include "components/footer.html" %}
 
   </body>
