--- a/src/assets/sass/about.scss
+++ b/src/assets/sass/about.scss
@@ -909,284 +909,283 @@
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
 
-	#cs-footer-842 {
-		padding: var(--sectionPadding);
-		/* 30px - 50px */
-		padding-bottom: clamp(1.875rem, 5vw, 3.125rem);
-		background-color: #1a1a1a;
-		position: relative;
-		margin-top: 14vw;
+    #cs-footer-842 {
+   
+        padding: var(--sectionPadding);
+        /* 30px - 50px */
+        padding-bottom: clamp(1.875rem, 5vw, 3.125rem);
+        background-color: #1a1a1a;
+        position: relative;
 
-		.cs-wave {
-			width: 100%;
-			height: auto;
-			position: absolute;
-			left: 0;
-			bottom: 99%;
-		}
+        .cs-wave {
+            width: 100%;
+            height: auto;
+            position: absolute;
+            left: 0;
+            bottom: 99%;
+        }
+   
+        .cs-container {
+            width: 100%;
+            /* reset on tablet */
+            max-width: calc(550 / 16 * 1rem);
+            margin: auto;
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            flex-wrap: wrap;
+            column-gap: calc(48 / 16 * 1rem);
+            row-gap: calc(32 / 16 * 1rem);
+        }
 
-		.cs-container {
-			width: 100%;
-			/* reset on tablet */
-			max-width: calc(550 / 16 * 1rem);
-			margin: auto;
-			display: flex;
-			justify-content: flex-start;
-			align-items: flex-start;
-			flex-wrap: wrap;
-			column-gap: calc(48 / 16 * 1rem);
-			row-gap: calc(32 / 16 * 1rem);
-		}
+        .cs-logo-group {
+            /* takes up all the space, lets the other ul's wrap below it */
+            width: 100%;
+            position: relative;
+        }
 
-		.cs-logo-group {
-			/* takes up all the space, lets the other ul's wrap below it */
-			width: 100%;
-			position: relative;
-		}
+        .cs-logo {
+            width: calc(210 / 16 * 1rem);
+            height: auto;
+            margin: 0 0 calc(24 / 16 * 1rem) 0;
+            display: block;
+        }
 
-		.cs-logo {
-			width: calc(210 / 16 * 1rem);
-			height: auto;
-			margin: 0 0 calc(24 / 16 * 1rem) 0;
-			display: block;
-		}
+        .cs-logo-img {
+            width: 100%;
+            height: auto;
+        }
 
-		.cs-logo-img {
-			width: 100%;
-			height: auto;
-		}
+        .cs-text {
+            font-size: calc(16 / 16 * 1rem);
+            line-height: 1.5em;
+            margin: 0 0 calc(24 / 16 * 1rem) 0;
+            max-width: calc(400 / 16 * 1rem);
+            color: #BABABA;
+        }
 
-		.cs-text {
-			font-size: calc(16 / 16 * 1rem);
-			line-height: 1.5em;
-			margin: 0 0 calc(24 / 16 * 1rem) 0;
-			max-width: calc(400 / 16 * 1rem);
-			color: #bababa;
-		}
+        .cs-social {
+            display: inline-flex;
+            justify-content: flex-start;
+            gap: calc(12 / 16 * 1rem);
+        }
 
-		.cs-social {
-			display: inline-flex;
-			justify-content: flex-start;
-			gap: calc(12 / 16 * 1em);
-		}
+        .cs-social-link {
+            width: calc(32 / 16 * 1rem);
+            height: calc(32 / 16 * 1rem);
+            background-color: #484848;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            z-index: 1;
+            transition: transform .3s, background-color .3s;
 
-		.cs-social-link {
-			width: calc(32 / 16 * 1rem);
-			height: calc(32 / 16 * 1rem);
-			background-color: #484848;
-			border-radius: 50%;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			position: relative;
-			z-index: 1;
-			transition: transform 0.3s, background-color 0.3s;
+            &:hover {
+                background-color: var(--primaryLight);
+                transform: translateY(-.1875rem);
 
-			&:hover {
-				background-color: var(--primaryLight);
-				transform: translateYcalc(-3/16 * 1rem);
+                .cs-social-img {
+                    filter: grayscale(1) brightness(1000%);
+                }
+            }
+        }
 
-				.cs-social-img {
-					filter: grayscale(1) brightness(1000%);
-				}
-			}
-		}
+        .cs-social-img {
+            height: calc(12 / 16 * 1rem);
+            width: auto;
+            display: block;
+        }
 
-		.cs-social-img {
-			height: calc(12 / 16 * 1rem);
-			width: auto;
-			display: block;
-		}
+        .cs-header {
+            font-size: calc(20 / 16 * 1rem);
+            line-height: 1.5em;
+            font-weight: 700;
+            margin: 0 0 calc(20 / 16 * 1rem) 0;
+            color: var(--bodyTextColorWhite);
+            display: block;
+            position: relative;
+        }
 
-		.cs-header {
-			font-size: calc(20 / 16 * 1rem);
-			line-height: 1.5em;
-			font-weight: 700;
-			margin: 0 0 calc(20 / 16 * 1rem) 0;
-			color: var(--bodyTextColorWhite);
-			display: block;
-			position: relative;
-		}
+        .cs-ul {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            gap: calc(12 / 16 * 1rem);
+        }
 
-		.cs-ul {
-			margin: 0;
-			padding: 0;
-			display: flex;
-			flex-direction: column;
-			gap: calc(12 / 16 * 1rem);
-		}
+        .cs-ul-1 {
+            width: 100%;
+            max-width: calc(350 / 16 * 1rem);
+            flex-direction: row;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            column-gap: calc(32 / 16 * 1rem);
 
-		.cs-ul-1 {
-			width: 100%;
-			max-width: calc(350 / 16 * 1rem);
-			flex-direction: row;
-			justify-content: space-between;
-			flex-wrap: wrap;
-			column-gap: calc(32 / 16 * 1rem);
+            .cs-li {
+                width: 44%;
+            }
+        }
 
-			.cs-li {
-				width: 44%;
-			}
-		}
+        .cs-li {
+            list-style: none;
+        }
 
-		.cs-li {
-			list-style: none;
-		}
+        .cs-link {
+            font-size: calc(16 / 16 * 1rem);
+            text-decoration: none;
+            line-height: 1.5em;
+            text-align: left;
+            color: #BABABA;
+            display: inline-flex;
+            align-items: flex-start;
+            gap: calc(8 / 16 * 1rem);
+            transition: color .3s;
 
-		.cs-link {
-			font-size: calc(16 / 16 * 1rem);
-			text-decoration: none;
-			line-height: 1.5em;
-			text-align: left;
-			color: #bababa;
-			display: inline-flex;
-			align-items: flex-start;
-			gap: calc(8 / 16 * 1rem);
-			transition: color 0.3s;
+            &:hover {
+                color: var(--primaryLight);
+            }
+        }
 
-			&:hover {
-				color: var(--primaryLight);
-			}
-		}
+        .cs-icon {
+            width: calc(20 / 16 * 1rem);
+            height: auto;
+            margin-right: calc(2 / 16 * 1rem);
+            display: block;
+        }
 
-		.cs-icon {
-			width: calc(20 / 16 * 1rem);
-			height: auto;
-			margin-right: calc(2 / 16 * 1rem);
-			display: block;
-		}
+        .cs-bottom {
+            text-align: center;
+            width: 100%;
+            max-width: calc(1280 / 16 * 1rem);
+            /* 48px - 64px */
+            margin: clamp(3rem, 7vw, 4rem) auto 0;
+            padding-top: calc(24 / 16 * 1rem);
+            border-top: 1px solid #484848;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: calc(12 / 16 * 1rem);
+        }
 
-		.cs-bottom {
-			text-align: center;
-			width: 100%;
-			max-width: calc(1280 / 16 * 1rem);
-			/* 48px - 64px */
-			margin: clamp(3rem, 7vw, 4rem) auto 0;
-			padding-top: calc(24 / 16 * 1rem);
-			border-top: 1px solid #484848;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-			gap: calc(12 / 16 * 1rem);
-		}
+        .cs-credit, .cs-bottom-link, .cs-credit-link {
+            /* 14px - 16px */
+            font-size: clamp(.875rem, 1.5vw, 1rem);
+            line-height: 1.5em;
+            text-decoration: none;
+            width: auto;
+            margin: 0;
+            color: #bababa;
+            display: inline-block;
+            position: relative;
+            transition: color .3s;
+        }
 
-		.cs-credit,
-		.cs-bottom-link,
-		.cs-credit-link {
-			/* 14px - 16px */
-			font-size: clamp(0.875rem, 1.5vw, 1rem);
-			line-height: 1.5em;
-			text-decoration: none;
-			width: auto;
-			margin: 0;
-			color: #bababa;
-			display: inline-block;
-			position: relative;
-			transition: color 0.3s;
-		}
+        .cs-credit {
+            width: 100%;
+        }
 
-		.cs-credit {
-			width: 100%;
-		}
+        .cs-credit-link {
+            /* 14px - 16px */
+            font-size: clamp(.875rem, 1.5vw, 1rem);
+            line-height: 1.5em;
+            text-decoration: none;
+            width: auto;
+            margin: 0;
+            color: #bababa;
+            display: inline-block;
+            position: relative;
 
-		.cs-credit-link {
-			/* 14px - 16px */
-			font-size: clamp(0.875rem, 1.5vw, 1rem);
-			line-height: 1.5em;
-			text-decoration: none;
-			width: auto;
-			margin: 0;
-			color: #bababa;
-			display: inline-block;
-			position: relative;
+            &:hover {
+                color: var(--primary);
+            }
+        }
 
-			&:hover {
-				color: var(--primary);
-			}
-		}
+        .cs-bottom-links {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-		.cs-bottom-links {
-			width: 100%;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-		}
+        .cs-bottom-link {
+            display: flex;
+            align-items: center;
 
-		.cs-bottom-link {
-			display: flex;
-			align-items: center;
+            &:hover {
+                color: var(--primary);
+            }
 
-			&:hover {
-				color: var(--primary);
-			}
-
-			&:last-of-type {
-				&:before {
-					/* seperator */
-					content: '';
-					width: 1px;
-					height: calc(14 / 16 * 1rem);
-					margin: 0 calc(12 / 16 * 1rem);
-					background: currentColor;
-					opacity: 1;
-					display: block;
-				}
-			}
-		}
-	}
+            &:last-of-type {
+                &:before {
+                    /* seperator */
+                    content: '';
+                    width: 1px;
+                    height: calc(14 / 16 * 1rem);
+                    margin: 0 calc(12 / 16 * 1rem);
+                    background: currentColor;
+                    opacity: 1;
+                    display: block;
+                }
+            }
+        }
+    }
 }
 
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-	#cs-footer-842 {
-		.cs-container {
-			max-width: calc(1280 / 16 * 1rem);
-			/* 48px - 64px */
-			row-gap: clamp(3rem, 7vw, 4rem);
-		}
+    #cs-footer-842 {
+        .cs-container {
+            max-width: calc(1280 / 16 * 1rem);
+            /* 48px - 64px */
+            row-gap: clamp(3rem, 7vw, 4rem);
+        }
+        
+        .cs-bottom {
+            justify-content: space-between;
+            flex-wrap: nowrap;
+        }
 
-		.cs-bottom {
-			justify-content: space-between;
-			flex-wrap: nowrap;
-		}
+        .cs-credit {
+            text-align: left;
+        }
 
-		.cs-credit {
-			text-align: left;
-		}
-
-		.cs-bottom-links {
-			justify-content: flex-end;
-		}
-	}
+        .cs-bottom-links {
+            justify-content: flex-end;
+        }
+    }
 }
 
 /* Small Desktop - 1024px */
 @media only screen and (min-width: 64rem) {
-	#cs-footer-842 {
-		.cs-container {
-			/* pushes all flex children to the top */
-			align-items: flex-start;
-			justify-content: flex-end;
-			flex-wrap: nowrap;
-		}
+    #cs-footer-842 {
+        .cs-container {
+            /* pushes all flex children to the top */
+            align-items: flex-start;
+            justify-content: flex-end;
+            flex-wrap: nowrap;
+        }
 
-		.cs-logo-group {
-			width: 30%;
-			max-width: calc(400 / 16 * 1rem);
-			/* pushes everything to the right of it as far as possible in a flexbox */
-			margin-right: auto;
-		}
+        .cs-logo-group {
+            width: 30%;
+            max-width: calc(400 / 16 * 1rem);
+            /* pushes everything to the right of it as far as possible in a flexbox */
+            margin-right: auto;
+        }
 
-		.cs-text {
-			width: 100%;
-		}
+        .cs-text {
+            width: 100%;
+        }
 
-		.cs-social {
-			flex-direction: row;
-			position: relative;
-			top: auto;
-			right: auto;
-		}
-	}
+        .cs-social {
+            flex-direction: row;
+            position: relative;
+            top: auto;
+            right: auto;
+        }
+    }
 }
                                 
+                                                
