--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="/about" class="cs-li-link            
+                        <a href="about/" class="cs-li-link            
                             {{ 'cs-active' if 'about' == page.fileSlug}}
                             ">
                             About
