--- a/src/_includes/components/header2.html
+++ b/src/_includes/components/header2.html
@@ -46,7 +46,7 @@
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="/about" class="cs-li-link">
+                        <a href="about/" class="cs-li-link">
                             About
                         </a>
                     </li>
