--- a/src/_includes/components/footer3.html
+++ b/src/_includes/components/footer3.html
@@ -6,7 +6,7 @@
  <div class="cs-container">
         <!-- Logo Group -->
         <div class="cs-logo-group">
-            <a aria-label="go back to home" class="cs-logo" href="index.html">
+            <a aria-label="go back to home" class="cs-logo" href="/index">
                 <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/websitelogo.png" alt="logo" width="240" height="32">
             </a>
             <p class="cs-text">
@@ -86,7 +86,7 @@
     </div>
     <div class="cs-bottom">
         <span class="cs-credit">
-            © Copyright 2023 <a href="index.html" class="cs-credit-link" target="_blank">Enigma Digital</a>
+            © Copyright 2023 <a href="index/" class="cs-credit-link" target="_blank">Enigma Digital</a>
         </span>
     </div>
 </footer>
