--- a/src/_includes/components/header2.html
+++ b/src/_includes/components/header2.html
@@ -41,7 +41,7 @@
             <div class="cs-ul-wrapper">
                 <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
                     <li class="cs-li">
-                        <a href="/index" class="cs-li-link cs-active" >
+                        <a href="index/" class="cs-li-link cs-active" >
                             Home
                         </a>
                     </li>
@@ -62,33 +62,33 @@
                         </span>
                         <ul class="cs-drop-ul">
                             <li class="cs-drop-li">
-                                <a href="/weddings" class="cs-li-link cs-drop-link">Weddings</a>
+                                <a href="weddings/" class="cs-li-link cs-drop-link">Weddings</a>
                             </li>
                             <li class="cs-drop-li">
-                                <a href="/corporate" class="cs-li-link cs-drop-link">Corporate Events</a>
+                                <a href="corporate/" class="cs-li-link cs-drop-link">Corporate Events</a>
                             </li>
                              <li class="cs-drop-li">
-                                <a href="/social" class="cs-li-link cs-drop-link">Social Activites</a>
+                                <a href="social/" class="cs-li-link cs-drop-link">Social Activites</a>
                             </li>
                         </ul>
                     </li>
                     <li class="cs-li">
-                        <a href="/gallery" class="cs-li-link">
+                        <a href="gallery/" class="cs-li-link">
                             Gallery
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="/blog" class="cs-li-link">
+                        <a href="blog/" class="cs-li-link">
                             Blog
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="/contact" class="cs-li-link">
+                        <a href="contact/" class="cs-li-link">
                             Contact Us
                         </a>
                     </li>
                       <li class="cs-li hidden">
-                        <a href="/booking" class="cs-li-link">
+                        <a href="booking/" class="cs-li-link">
                             Book Now
                         </a>
                     </li>
