Hopefully Final Push

--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -10,7 +10,7 @@
             <p class="cs-text">
                 Let's make your wedding day even more special with the enchanting touch of our 360 photobooth
             </p>
-            <a href="/booking" class="cs-button-solid">Book Your Photobooth</a>
+            <a href="/booking/" class="cs-button-solid">Book Your Photobooth</a>
         </div>
     </div>
     <!-- Background Image-->
