--- a/src/_includes/components/footer2.html
+++ b/src/_includes/components/footer2.html
@@ -4,10 +4,10 @@
 <!-- ============================================ -->
 
 <footer id="cs-footer-841">
- <div class="cs-container">
+  <div class="cs-container">
         <!-- Logo Group -->
         <div class="cs-logo-group">
-            <a aria-label="go back to home" class="cs-logo" href="index/">
+            <a aria-label="go back to home" class="cs-logo" href="/">
                 <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/websitelogo.png" alt="logo" width="240" height="32">
             </a>
             <p class="cs-text">
@@ -19,36 +19,36 @@
                 </a>
             </div>
         </div>
-       <!-- Links -->
+        <!-- Links -->
         <div class="cs-ul-wrapper">
             <span class="cs-header">Quick Links</span>
             <ul class="cs-ul cs-ul-1">
                 <li class="cs-li">
-                    <a class="cs-link" href="index/">Home</a>
+                    <a class="cs-link" href="/">Home</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="about/">About</a>
+                    <a class="cs-link" href="/about/">About</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="wedding/">Wedding</a>
+                    <a class="cs-link" href="/wedding/">Wedding</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="corporate/">Corporate</a>
+                    <a class="cs-link" href="/corporate/">Corporate</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="social/">Parties</a>
+                    <a class="cs-link" href="/social/">Parties</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="gallery/">Gallery</a>
+                    <a class="cs-link" href="/gallery/">Gallery</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="contact/">Contact</a>
+                    <a class="cs-link" href="/contact/">Contact</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="blog/">Blog</a>
+                    <a class="cs-link" href="/blog/">Blog</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="Booking/">Book Now</a>
+                    <a class="cs-link" href="/Booking/">Book Now</a>
                 </li>
             </ul>
         </div>
@@ -85,9 +85,42 @@
             </ul>
         </div>
     </div>
+        <div class="cs-ul-wrapper">
+            <!-- Contact Info -->
+            <span class="cs-header">Contact Information</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    <!--Make this link go to the google page-->
+                    <a class="cs-link" href="https://www.google.com/search?q=snapnsweet&sxsrf=AB5stBiFhRJ0Id6T_hSa0dDSH34N2DQBUQ%3A1690813062875&ei=hsLHZMSPNeOJptQPxJu5kAM&ved=0ahUKEwjE6vm_kbmAAxXjhIkEHcRNDjIQ4dUDCBA&uact=5&oq=snapnsweet&gs_lp=Egxnd3Mtd2l6LXNlcnAiCnNuYXBuc3dlZXQyBBAjGCcyBBAjGCcyBBAjGCcyBxAAGIAEGAoyBxAAGIAEGAoyBxAAGIAEGAoyBxAAGIAEGApIkQdQ9QNY9QNwAXgBkAEAmAGAAaABgAGqAQMwLjG4AQPIAQD4AQHCAgcQIxiwAxgnwgIKEAAYRxjWBBiwA-IDBBgAIEGIBgGQBgk&sclient=gws-wiz-serp#lrd=0x89d4d38a146c408b:0x34df31ebdcc2dfe3,1,,,," target="_blank">
+                        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fclock-grey.svg" alt="clock icon" width="20" height="20">
+                        M-F 8am – 9:30pm
+                    </a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="tel:647-779-7369">
+                        <img class="cs-contact-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fphone-grey.svg" alt="phone icon" width="20" height="20">
+                        647-779-7369
+                    </a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="mailto:info@snapnsweet.ca">
+                        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fmessage-grey.svg" alt="email icon" width="20" height="20">
+                        info@snapnsweet.ca
+                    </a>
+                </li>
+                <li class="cs-li">
+                    <!--Make this link go to the google page-->
+                    <a class="cs-link" href="https://www.google.com/maps/place/Snap+'n+Sweet+-+360+Photo+Booth+Rental+GTA+Toronto/@43.8006199,-79.2929558,16z/data=!4m15!1m8!3m7!1s0x89d4d3dfb764ccbd:0x5f00bf35953807f0!2s53+Kenfin+Ave,+Scarborough,+ON+M1S+4E8!3b1!8m2!3d43.8004197!4d-79.2923464!16s%2Fg%2F11c2c2q6wf!3m5!1s0x89d4d38a146c408b:0x34df31ebdcc2dfe3!8m2!3d43.8004197!4d-79.2923464!16s%2Fg%2F11v0b8w1sp?hl=en&entry=ttu" target="_blank">
+                        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fpin-grey.svg" alt="pin icon" width="20" height="20">
+                        53 Kenfin Ave, Scarborough, ON M1S 4E8
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div class="cs-bottom">
         <span class="cs-credit">
-            © Copyright 2023 <a href="index/" class="cs-credit-link" target="_blank">Enigma Digital</a>
+            © Copyright 2023 <a href="/" class="cs-credit-link" target="_blank">Enigma Digital</a>
         </span>
     </div>
 </footer>
