--- a/src/_includes/components/footer3.html
+++ b/src/_includes/components/footer3.html
@@ -3,10 +3,10 @@
 <!-- ============================================ -->
 
 <footer id="cs-footer-840">
- <div class="cs-container">
+  <div class="cs-container">
         <!-- Logo Group -->
         <div class="cs-logo-group">
-            <a aria-label="go back to home" class="cs-logo" href="/index">
+            <a aria-label="go back to home" class="cs-logo" href="/">
                 <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/websitelogo.png" alt="logo" width="240" height="32">
             </a>
             <p class="cs-text">
@@ -22,32 +22,32 @@
         <div class="cs-ul-wrapper">
             <span class="cs-header">Quick Links</span>
             <ul class="cs-ul cs-ul-1">
-             <li class="cs-li">
-                    <a class="cs-link" href="/index">Home</a>
+                <li class="cs-li">
+                    <a class="cs-link" href="/">Home</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="/about">About</a>
+                    <a class="cs-link" href="/about/">About</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="/wedding">Wedding</a>
+                    <a class="cs-link" href="/wedding/">Wedding</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="/corporate">Corporate</a>
+                    <a class="cs-link" href="/corporate/">Corporate</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="/social">Parties</a>
+                    <a class="cs-link" href="/social/">Parties</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="/gallery">Gallery</a>
+                    <a class="cs-link" href="/gallery/">Gallery</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="/contact">Contact</a>
+                    <a class="cs-link" href="/contact/">Contact</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="/blog">Blog</a>
+                    <a class="cs-link" href="/blog/">Blog</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="/Booking">Book Now</a>
+                    <a class="cs-link" href="/Booking/">Book Now</a>
                 </li>
             </ul>
         </div>
@@ -86,7 +86,7 @@
     </div>
     <div class="cs-bottom">
         <span class="cs-credit">
-            © Copyright 2023 <a href="index/" class="cs-credit-link" target="_blank">Enigma Digital</a>
+            © Copyright 2023 <a href="/" class="cs-credit-link" target="_blank">Enigma Digital</a>
         </span>
     </div>
 </footer>
