--- a/src/_includes/components/header2.html
+++ b/src/_includes/components/header2.html
@@ -41,12 +41,12 @@
             <div class="cs-ul-wrapper">
                 <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
                     <li class="cs-li">
-                        <a href="index/" class="cs-li-link cs-active" >
+                        <a href="/" class="cs-li-link cs-active" >
                             Home
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="about/" class="cs-li-link">
+                        <a href="/about/" class="cs-li-link">
                             About
                         </a>
                     </li>
@@ -62,40 +62,40 @@
                         </span>
                         <ul class="cs-drop-ul">
                             <li class="cs-drop-li">
-                                <a href="weddings/" class="cs-li-link cs-drop-link">Weddings</a>
+                                <a href="/Weddings/" class="cs-li-link cs-drop-link">Weddings</a>
                             </li>
                             <li class="cs-drop-li">
-                                <a href="corporate/" class="cs-li-link cs-drop-link">Corporate Events</a>
+                                <a href="/Corporate/" class="cs-li-link cs-drop-link">Corporate Events</a>
                             </li>
                              <li class="cs-drop-li">
-                                <a href="social/" class="cs-li-link cs-drop-link">Social Activites</a>
+                                <a href="/social/" class="cs-li-link cs-drop-link">Social Activites</a>
                             </li>
                         </ul>
                     </li>
                     <li class="cs-li">
-                        <a href="gallery/" class="cs-li-link">
+                        <a href="/gallery/" class="cs-li-link">
                             Gallery
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="blog/" class="cs-li-link">
+                        <a href="/blog/" class="cs-li-link">
                             Blog
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="contact/" class="cs-li-link">
+                        <a href="/contact/" class="cs-li-link">
                             Contact Us
                         </a>
                     </li>
                       <li class="cs-li hidden">
-                        <a href="booking/" class="cs-li-link">
+                        <a href="/booking/" class="cs-li-link">
                             Book Now
                         </a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <a href="/Booking" class="cs-button-solid cs-nav-button">Book Now</a>
+        <a href="/Booking/" class="cs-button-solid cs-nav-button">Book Now</a>
         <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
         <!-- <button id="dark-mode-toggle" aria-label="dark mode toggle">
             <svg class="cs-moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 480" style="enable-background:new 0 0 480 480" xml:space="preserve"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>
