Link Errors Fixed

--- a/src/_includes/components/footer1.html
+++ b/src/_includes/components/footer1.html
@@ -7,10 +7,10 @@
     <svg class="cs-wave" width="1920" height="188" viewBox="0 0 1920 188" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <path d="M1920 45.8671C1835.33 45.8671 1715.47 60.6671 1549.2 104.534C1115.6 218.4 932.267 0.000366211 466.533 0.000366211C218.933 0.000366211 172.8 45.8671 0.133333 45.8671L0 187.934H1920V45.8671Z" fill="#1A1A1A"/>
     </svg>
-    <div class="cs-container">
+   <div class="cs-container">
         <!-- Logo Group -->
         <div class="cs-logo-group">
-            <a aria-label="go back to home" class="cs-logo" href="index/">
+            <a aria-label="go back to home" class="cs-logo" href="/">
                 <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/websitelogo.png" alt="logo" width="240" height="32">
             </a>
             <p class="cs-text">
@@ -22,36 +22,36 @@
                 </a>
             </div>
         </div>
-       <!-- Links -->
+        <!-- Links -->
         <div class="cs-ul-wrapper">
             <span class="cs-header">Quick Links</span>
             <ul class="cs-ul cs-ul-1">
                 <li class="cs-li">
-                    <a class="cs-link" href="index/">Home</a>
+                    <a class="cs-link" href="/">Home</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="about/">About</a>
+                    <a class="cs-link" href="/about/">About</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="wedding/">Wedding</a>
+                    <a class="cs-link" href="/wedding/">Wedding</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="corporate/">Corporate</a>
+                    <a class="cs-link" href="/corporate/">Corporate</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="social/">Parties</a>
+                    <a class="cs-link" href="/social/">Parties</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="gallery/">Gallery</a>
+                    <a class="cs-link" href="/gallery/">Gallery</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="contact/">Contact</a>
+                    <a class="cs-link" href="/contact/">Contact</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="blog/">Blog</a>
+                    <a class="cs-link" href="/blog/">Blog</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="Booking/">Book Now</a>
+                    <a class="cs-link" href="/Booking/">Book Now</a>
                 </li>
             </ul>
         </div>
@@ -90,7 +90,7 @@
     </div>
     <div class="cs-bottom">
         <span class="cs-credit">
-            © Copyright 2023 <a href="index/" class="cs-credit-link" target="_blank">Enigma Digital</a>
+            © Copyright 2023 <a href="/" class="cs-credit-link" target="_blank">Enigma Digital</a>
         </span>
     </div>
 </footer>
