--- a/src/_includes/components/footer3.html
+++ b/src/_includes/components/footer3.html
@@ -88,6 +88,9 @@
         <span class="cs-credit">
             © Copyright 2023 <a href="/" class="cs-credit-link" target="_blank">Enigma Digital</a>
         </span>
+             <div class="cs-bottom-links">
+            <a href="/privacy" class="cs-bottom-link">Privacy Policy</a>
+        </div>
     </div>
 </footer>
                                 
