--- a/src/_includes/components/header2.html
+++ b/src/_includes/components/header2.html
@@ -24,7 +24,7 @@
     </div>
     <div class="cs-container">
       <!--Nav Logo-->
-        <a href="/index.html" class="cs-logo" aria-label="back to home">
+        <a href="/" class="cs-logo" aria-label="back to home">
             <img src="/assets/images/websitelogo.png" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
         </a>
         <!--Navigation List-->
