--- a/src/_includes/components/footer1.html
+++ b/src/_includes/components/footer1.html
@@ -90,7 +90,7 @@
     </div>
     <div class="cs-bottom">
         <span class="cs-credit">
-            © Copyright 2023 <a href="/" class="cs-credit-link" target="_blank">Enigma Digital</a>
+            © Copyright 2023 Handcoded By <a href="/" class="cs-credit-link" target="_blank">Enigma Digital</a>
         </span>
              <div class="cs-bottom-links">
             <a href="/privacy" class="cs-bottom-link">Privacy Policy</a>
